feat: #136: add C++ implementation (#74)

--- a/problems/136.single-number.md
+++ b/problems/136.single-number.md
@@ -36,6 +36,9 @@ Your algorithm should have a linear runtime complexity. Could you implement it w
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScrip Code：
 ```js
 /*
  * @lc app=leetcode id=136 lang=javascript
@@ -84,6 +87,25 @@ var singleNumber = function(nums) {
     ret = ret ^ element;
   }
   return ret;
+};
+```
+C++：
+```C++
+class Solution {
+public:
+    int singleNumber(vector<int>& nums) {
+        auto ret = 0;
+        for (auto i : nums) ret ^= i;
+        return ret;
+    }
+};
+
+// C++ one-liner
+class Solution {
+public:
+    int singleNumber(vector<int>& nums) {
+        return accumulate(nums.cbegin(), nums.cend(), 0, bit_xor<int>());
+    }
 };
 ```
 
