--- a/problems/88.merge-sorted-array.md
+++ b/problems/88.merge-sorted-array.md
@@ -147,9 +147,9 @@ function merge(nums1, nums2) {
  * @return {void} Do not return anything, modify nums1 in-place instead.
  */
 var merge = function(nums1, m, nums2, n) {
-  // 设置一个指针，指针初始化指向nums1的末尾
+  // 设置一个指针，指针初始化指向nums1的末尾（根据#62，应该是index为 m+n-1 的位置，因为nums1的长度有可能更长）
   // 然后不断左移指针更新元素
-  let current = nums1.length - 1;
+  let current = m + n - 1;
 
   while (current >= 0) {
     // 没必要继续了
@@ -181,7 +181,7 @@ C++ code:
 class Solution {
 public:
     void merge(vector<int>& nums1, int m, vector<int>& nums2, int n) {
-        int current = nums1.size()- 1;
+        int current = m + n - 1;
         while (current >= 0) {
             if (n == 0) return;
             if (m < 1) {
