--- a/problems/121.best-time-to-buy-and-sell-stock.md
+++ b/problems/121.best-time-to-buy-and-sell-stock.md
@@ -40,7 +40,7 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 代码
 
-语言支持：JS，Python，C++ 
+语言支持：JS，Python，C++
 
 JS Code:
 
@@ -60,31 +60,31 @@ JS Code:
  *
  * Say you have an array for which the i^th element is the price of a given
  * stock on day i.
- * 
+ *
  * If you were only permitted to complete at most one transaction (i.e., buy
  * one and sell one share of the stock), design an algorithm to find the
  * maximum profit.
- * 
+ *
  * Note that you cannot sell a stock before you buy one.
- * 
+ *
  * Example 1:
- * 
- * 
+ *
+ *
  * Input: [7,1,5,3,6,4]
  * Output: 5
  * Explanation: Buy on day 2 (price = 1) and sell on day 5 (price = 6), profit
  * = 6-1 = 5.
  * Not 7-1 = 6, as selling price needs to be larger than buying price.
- * 
- * 
+ *
+ *
  * Example 2:
- * 
- * 
+ *
+ *
  * Input: [7,6,4,3,1]
  * Output: 0
  * Explanation: In this case, no transaction is done, i.e. max profit = 0.
- * 
- * 
+ *
+ *
  */
 /**
  * @param {number[]} prices
@@ -111,28 +111,19 @@ var maxProfit = function(prices) {
 Python Code:
 
 ```python
-# 应用Kadane's algorithms 
 class Solution:
     def maxProfit(self, prices: 'List[int]') -> int:
-        """
-        step by step
-        """
-        # error case
-        if len(prices) < 1:
-            return 0
+        if not prices: return 0
 
-        # caluate the daily gains, break into a subarray problem
-        gains = [prices[i]-prices[i-1] for i in range(1, len(prices))]
+        min_price = float('inf')
+        max_profit = 0
 
-        loc_max = global_max = 0 #not gains[0] in case of negative
-        for i in range(len(gains)):
-            loc_max = max(loc_max + gains[i], gains[i])
-            if loc_max > global_max:
-                global_max = loc_max
-"""
-Runtime: 48 ms, faster than 34.50% of Python3 online submissions for Best Time to Buy and Sell Stock.
-Memory Usage: 14.1 MB, less than 10.26% of Python3 online submissions for Best Time to Buy and Sell Stock.
-"""
+        for price in prices:
+            if price < min_price:
+                min_price = price
+            elif max_profit < price - min_price:
+                max_profit = price - min_price
+        return max_profit
 ```
 
 C++ Code:
@@ -164,4 +155,3 @@ public:
 
 - [122.best-time-to-buy-and-sell-stock-ii](./122.best-time-to-buy-and-sell-stock-ii.md)
 - [309.best-time-to-buy-and-sell-stock-with-cooldown](./309.best-time-to-buy-and-sell-stock-with-cooldown.md)
-
