feat: 125.valid-palindrome add Python3 implementation (#83)

--- a/problems/125.valid-palindrome.md
+++ b/problems/125.valid-palindrome.md
@@ -48,7 +48,7 @@ Output: false
 
 ## 代码
 
-* 语言支持：JS，C++
+* 语言支持：JS，C++，Python
 
 JavaScript Code:
 
@@ -116,4 +116,32 @@ public:
         return true;
     }
 };
+```
+
+Python Code:
+
+```python
+class Solution:
+    def isPalindrome(self, s: str) -> bool:
+        left, right = 0, len(s) - 1
+        while left < right:
+            if not s[left].isalnum():
+                left += 1
+                continue
+            if not s[right].isalnum():
+                right -= 1
+                continue
+            if s[left].lower() == s[right].lower():
+                left += 1
+                right -= 1
+            else:
+                break
+        return right <= left
+
+    def isPalindrome2(self, s: str) -> bool:
+        """
+        使用语言特性进行求解
+        """
+        s = ''.join(i for i in s if i.isalnum()).lower()
+        return s == s[::-1]
 ```
