feat: 129.sum-root-to-leaf-numbers add Python3 implementation (#88)

--- a/problems/129.sum-root-to-leaf-numbers.md
+++ b/problems/129.sum-root-to-leaf-numbers.md
@@ -64,7 +64,7 @@ Therefore, sum = 495 + 491 + 40 = 1026.
 
 ## 代码
 
-* 语言支持：JS，C++
+* 语言支持：JS，C++，Python
 
 JavaScipt Code：
 
@@ -131,6 +131,33 @@ private:
 };
 ```
 
+Python Code:
+
+```python
+# class TreeNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Solution:
+    def sumNumbers(self, root: TreeNode) -> int:
+
+        def helper(node, cur_val):
+            if not node: return 0
+            next_val = cur_val * 10 + node.val
+
+            if not (node.left or node.right):
+                return next_val
+
+            left_val = helper(node.left, next_val)
+            right_val = helper(node.right, next_val)
+
+            return left_val + right_val
+
+        return helper(root, 0)
+```
+
 ## 拓展
 
 通常来说，可以利用队列、栈等数据结构将递归算法转为递推算法。
@@ -148,7 +175,12 @@ private:
 4. 若右子树非空，则将该值乘以10加上右子树的值，并添加到当前和队列中
 5. 若左右子树均为空时，将该节点的当前和加到返回值中
 
-### C++实现
+## 实现
+
+* 语言支持：C++，Python
+
+C++ Code：
+
 ```C++
 class Solution {
 public:
@@ -171,7 +203,7 @@ public:
                 if (n->right != nullptr) {
                     runningSum.push_back(tmp * 10 + n->right->val);
                     queue.push_back(n->right);
-                } 
+                }
                 if (n->left == nullptr && n->right == nullptr) {
                     ret += tmp;
                 }
@@ -181,9 +213,32 @@ public:
     }
 };
 ```
+
+Python Code:
+
+```python
+class Solution:
+    def sumNumbers(self, root: TreeNode) -> int:
+        if not root: return 0
+        result = 0
+        node_queue, sum_queue = [root], [root.val]
+        while node_queue:
+            for i in node_queue:
+                cur_node = node_queue.pop(0)
+                cur_val = sum_queue.pop(0)
+                if cur_node.left:
+                    node_queue.append(cur_node.left)
+                    sum_queue.append(cur_val * 10 + cur_node.left.val)
+                if cur_node.right:
+                    node_queue.append(cur_node.right)
+                    sum_queue.append(cur_val * 10 + cur_node.right.val)
+                if not (cur_node.left or cur_node.right):
+                    result += cur_val
+        return result
+```
+
 ## 相关题目
 
 - [sum-of-root-to-leaf-binary-numbers](https://leetcode.com/problems/sum-of-root-to-leaf-binary-numbers/)
 
 > 这道题和本题太像了，跟一道题没啥区别
-
