feat : #198: add C++ implementation (#118)

--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -77,6 +77,10 @@ return b;
 
 ## 代码
 
+* 语言支持：JS， C++
+
+JavaScript Code：
+
 ```js
 /*
  * @lc app=leetcode id=198 lang=javascript
@@ -136,5 +140,25 @@ var rob = function(nums) {
   }
 
   return dp[nums.length + 1];
+};
+```
+C++ Code：
+> 与JavaScript代码略有差异，但状态迁移方程是一样的。
+```C++
+class Solution {
+public:
+    int rob(vector<int>& nums) {
+        if (nums.empty()) return 0;
+        auto sz = nums.size();
+        if (sz == 1) return nums[0];
+        auto prev = nums[0];
+        auto cur = max(prev, nums[1]);
+        for (auto i = 2; i < sz; ++i) {
+            auto tmp = cur;
+            cur = max(nums[i] + prev, cur);
+            prev = tmp;
+        }
+        return cur;
+    }
 };
 ```
