fix: add some notes in 198.house-robber.md (#117)
* Update 198.house-robber.md

* Update 198.house-robber.md

--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -42,7 +42,7 @@ Explanation: Rob house 1 (money = 2), rob house 3 (money = 9) and rob house 5 (m
 
 > 这里的 dp 其实就是`子问题`.
 
-状态转移方程也不难写`dp[i] = Math.max(dp[i - 2] + nums[i - 2], dp[i - 1]);`.
+状态转移方程也不难写`dp[i] = Math.max(dp[i - 2] + nums[i - 2], dp[i - 1]);`（注：这里为了方便计算，令 `dp[0]`和 `dp[1]`都等于 0，所以 `dp[i]`对应的是 `nums[i - 2]`）
 
 上述过程用图来表示的话，是这样的：
 
