feat: 198.house-robber add Python3 implementation (#120)

--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -77,7 +77,7 @@ return b;
 
 ## 代码
 
-* 语言支持：JS， C++
+* 语言支持：JS，C++，Python
 
 JavaScript Code：
 
@@ -142,8 +142,11 @@ var rob = function(nums) {
   return dp[nums.length + 1];
 };
 ```
+
 C++ Code：
+
 > 与JavaScript代码略有差异，但状态迁移方程是一样的。
+
 ```C++
 class Solution {
 public:
@@ -161,4 +164,23 @@ public:
         return cur;
     }
 };
+```
+
+Python Code:
+
+```python
+class Solution:
+    def rob(self, nums: List[int]) -> int:
+        if not nums:
+            return 0
+
+        length = len(nums)
+        if length == 1:
+            return nums[0]
+        else:
+            prev = nums[0]
+            cur = max(prev, nums[1])
+            for i in range(2, length):
+                cur, prev = max(prev + nums[i], cur), cur
+            return cur
 ```
