feat : add c++ code  219.contains-duplicate-ii.md (#129)

--- a/problems/219.contains-duplicate-ii.md
+++ b/problems/219.contains-duplicate-ii.md
@@ -36,7 +36,7 @@ Output: false
 
 ## 代码
 
-* 语言支持：JS，Python
+* 语言支持：JS，Python，C++
 
 Javascript Code:
 
@@ -115,4 +115,23 @@ class Solution:
                 return True
             d[num] = index
         return False
+```
+C++ Code：
+```C++
+class Solution {
+public:
+    bool containsNearbyDuplicate(vector<int>& nums, int k) {
+        auto m = unordered_map<int, int>();
+        for (int i = 0; i < nums.size(); ++i) {
+            auto iter = m.find(nums[i]);
+            if (iter != m.end()) {
+                if (i - m[nums[i]] <= k) {
+                    return true;
+                }
+            }
+            m[nums[i]] = i;
+        }
+        return false;
+    }
+};
 ```
