feat: 283.move-zeroes add Python3 implementation (#142)

--- a/problems/283.move-zeroes.md
+++ b/problems/283.move-zeroes.md
@@ -31,9 +31,11 @@ Minimize the total number of operations.
 无
 
 ## 代码
-* 语言支持：JS，C++
+
+* 语言支持：JS, C++, Python
 
 JavaScript Code:
+
 ```js
 /*
  * @lc app=leetcode id=283 lang=javascript
@@ -50,19 +52,19 @@ JavaScript Code:
  *
  * Given an array nums, write a function to move all 0's to the end of it while
  * maintaining the relative order of the non-zero elements.
- * 
+ *
  * Example:
- * 
- * 
+ *
+ *
  * Input: [0,1,0,3,12]
  * Output: [1,3,12,0,0]
- * 
+ *
  * Note:
- * 
- * 
+ *
+ *
  * You must do this in-place without making a copy of the array.
  * Minimize the total number of operations.
- * 
+ *
  */
 /**
  * @param {number[]} nums
@@ -82,9 +84,12 @@ var moveZeroes = function(nums) {
     }
 };
 ```
+
 C++ Code：
+
 > 解题思想与上面JavaScript一致，做了少许代码优化（非性能优化，因为时间复杂度都是O(n)）：
 > 增加一个游标来记录下一个待处理的元素的位置，这样只需要写一次循环即可。
+
 ```C++
 class Solution {
 public:
@@ -101,7 +106,23 @@ public:
                 ++nonZero;
             }
             ++next;
-        } 
+        }
     }
 };
+```
+
+Python Code:
+
+```python
+class Solution:
+    def moveZeroes(self, nums: List[int]) -> None:
+        """
+        Do not return anything, modify nums in-place instead.
+        """
+        slow = fast = 0
+        while fast < len(nums):
+            if nums[fast] != 0:
+                nums[fast], nums[slow] = nums[slow], nums[fast]
+                slow += 1
+            fast += 1
 ```
