feat: 342.power-of-four add Python3 implementation (#144)

--- a/problems/342.power-of-four.md
+++ b/problems/342.power-of-four.md
@@ -80,7 +80,12 @@ return num > 0 && num & (num - 1 === 0) && (num - 1) % 3 === 0;
 - 数论
 - 2的幂次方特点（数学性质以及二进制表示）
 - 4的幂次方特点（数学性质以及二进制表示）
+
 ## 代码
+
+语言支持：JS, Python
+
+JavaScript Code：
 
 ```js
 /*
@@ -102,4 +107,25 @@ var isPowerOfFour = function(num) {
 
   return (num & 0x55555555) === num;
 };
+```
+
+Python Code:
+
+```python
+class Solution:
+    def isPowerOfFour(self, num: int) -> bool:
+        if num == 1:
+            return True
+        elif num < 4:
+            return False
+        else:
+            if not num & (num-1) == 0:
+                return False
+            else:
+                return num & 0x55555555 == num
+
+    # 另一种解法：将数字转化为二进制表示的字符串，利用字符串的相关操作进行判断
+    def isPowerOfFour(self, num: int) -> bool:
+        binary_num = bin(num)[2:]
+        return binary_num.strip('0') == '1' and len(binary_num) % 2 == 1
 ```
