feat: 263.ugly-number add Python3 implementation (#141)

--- a/problems/263.ugly-number.md
+++ b/problems/263.ugly-number.md
@@ -22,7 +22,7 @@ Explanation: 8 = 2 × 2 × 2
 Example 3:
 
 Input: 14
-Output: false 
+Output: false
 Explanation: 14 is not ugly since it includes another prime factor 7.
 Note:
 
@@ -61,10 +61,14 @@ Input is within the 32-bit signed integer range: [−231,  231 − 1].
 ## 关键点
 - 数论
 - 因数分解
+
 ## 代码
 
-```js
+* 语言支持：JS, Python
 
+Javascript Code:
+
+```js
 /*
  * @lc app=leetcode id=263 lang=javascript
  *
@@ -90,3 +94,16 @@ var isUgly = function(num) {
 };
 ```
 
+Python Code:
+
+```python
+# 非递归写法
+class Solution:
+    def isUgly(self, num: int) -> bool:
+        if num <= 0:
+            return False
+        for i in (2, 3, 5):
+            while num % i == 0:
+                num /= i
+        return num == 1
+```
