feat: problem #90 Add C++ implementation (#172)

--- a/problems/90.subsets-ii.md
+++ b/problems/90.subsets-ii.md
@@ -46,6 +46,10 @@ Output:
 
 ## 代码
 
+* 语言支持：JS，C++
+
+JavaScript Code：
+
 ```js
 
 
@@ -102,6 +106,30 @@ var subsetsWithDup = function(nums) {
     const list = [];
     backtrack(list, [], nums.sort((a, b) => a - b), 0, [])
     return list;
+};
+```
+C++ Code：
+
+```C++
+class Solution {
+private:
+    void subsetsWithDup(vector<int>& nums, size_t start, vector<int>& tmp, vector<vector<int>>& res) {
+        res.push_back(tmp);
+        for (auto i = start; i < nums.size(); ++i) {
+            if (i > start && nums[i] == nums[i - 1]) continue;
+            tmp.push_back(nums[i]);
+            subsetsWithDup(nums, i + 1, tmp, res);
+            tmp.pop_back();
+        }
+    }
+public:
+    vector<vector<int>> subsetsWithDup(vector<int>& nums) {
+        auto tmp = vector<int>();
+        auto res = vector<vector<int>>();
+        sort(nums.begin(), nums.end());
+        subsetsWithDup(nums, 0, tmp, res);
+        return res;
+    }
 };
 ```
 
