feat: 递归实现反转单链表的js实现 (#182)

--- a/problems/206.reverse-linked-list.md
+++ b/problems/206.reverse-linked-list.md
@@ -193,3 +193,24 @@ public:
     }
 };
 ```
+
+### JavaScript实现
+```javascript
+var reverseList = function(head) {
+  // 递归结束条件
+  if (head === null || head.next === null) {
+    return head
+  }
+
+  // 递归反转 子链表
+  let newReverseList = reverseList(head.next)
+  // 获取原来链表的第2个节点newReverseListTail
+  let newReverseListTail = head.next
+  // 调整原来头结点和第2个节点的指向
+  newReverseListTail.next = head
+  head.next = null
+
+  // 将调整后的链表返回
+  return newReverseList
+}
+```
