--- a/problems/454.4-sum-ii.md
+++ b/problems/454.4-sum-ii.md
@@ -49,6 +49,8 @@ The two tuples are:
 ## 代码
 
 语言支持： `JavaScript`，`Python3`
+
+`JavaScript`: 
 ```js
 
 /*
@@ -82,6 +84,8 @@ var fourSumCount = function(A, B, C, D) {
   return res;
 };
 ```
+
+`Python3`: 
 
 ```python
 class Solution:
