--- a/daily/2019-10-11.md
+++ b/daily/2019-10-11.md
@@ -20,6 +20,11 @@
 
 1. 由集合中元素的特点可以联想到 **二进制**。如果将集合中的所有元素都用二进制来表示的话：
 
+   1 等于 2的0次方 等于 二进制的 1 
+   2 等于 2的1次方 等于 二进制的 10
+   4 等于 2的2次方 等于 二进制的 100
+   ...
+   即：
    1=2^0=(1)2; 2=2^1=(10)2; 4 = 2^2 = (100)2;..... .**（等号最后的数都是二进制表示法）**
 
    集合中的每一个元素都可以表示为 首位为 1 其他位为 0 的二进制数。
