--- a/problems/1186.maximum-subarray-sum-with-one-deletion.md
+++ b/problems/1186.maximum-subarray-sum-with-one-deletion.md
@@ -74,7 +74,7 @@ https://leetcode.com/problems/maximum-subarray-sum-with-one-deletion/
 - 一层遍历， 建立r数组，r[i]表示从右边开始的以arr[i]结尾的subArraySum的最大值
 - 一层遍历， 计算 l[i - 1] + r[i + 1] 的最大值 
 > l[i - 1] + r[i + 1]的含义就是删除arr[i]的子数组最大值
-- 上面的上个步骤得到了删除一个的子数组最大值， 不删除的只需要在上面循环顺便计算一下即可
+- 上面的这个步骤得到了删除一个的子数组最大值， 不删除的只需要在上面循环顺便计算一下即可
 
 
 
