--- a/problems/1019.next-greater-node-in-linked-list.md
+++ b/problems/1019.next-greater-node-in-linked-list.md
@@ -43,9 +43,9 @@ https://leetcode-cn.com/problems/next-greater-node-in-linked-list/submissions/
 
 顾名思义，单调栈即满足单调性的栈结构。与单调队列相比，其只在一端进行进出。为了描述方便，以下举例及伪代码以维护一个整数的单调递减栈为例。将一个元素插入单调栈时，为了维护栈的单调性，需要在保证将该元素插入到栈顶后整个栈满足单调性的前提下弹出最少的元素。
 
-例如，栈中自顶向下的元素为 1，2，4，5 ，插入元素 3 时为了保证单调性需要依次弹出元素 ，操作后栈变为 3, 4，5 。
+例如，栈中自顶向下的元素为 1，2，4，5 ，插入元素 3 时为了保证单调性需要依次弹出元素 :
 
-- 此时栈是这样的： [5,4,2,1]
+- 最开始栈是这样的： [5,4,2,1]
 - 为了维护递减特性，1,2 需要被移除。此时栈是这样的： [5,4]
 - 我们将 3 push 到栈顶即可
 - 此时栈是这样的： [5,4,3]
