fix: add python code label

--- a/problems/1019.next-greater-node-in-linked-list.md
+++ b/problems/1019.next-greater-node-in-linked-list.md
@@ -52,6 +52,8 @@ https://leetcode-cn.com/problems/next-greater-node-in-linked-list/submissions/
 
 用代码描述如下：
 
+Python Code:
+
 ```python
 def monoStack(list):
     st = []
@@ -69,6 +71,8 @@ monoStack([5, 4, 2, 1, 3]) # output: [5, 4, 3]
 - 单调栈的代码模板
 
 ## 代码
+
+Python Code:
 
 ```python
 # Definition for singly-linked list.
