--- a/problems/1020.number-of-enclaves.md
+++ b/problems/1020.number-of-enclaves.md
@@ -59,6 +59,8 @@ https://leetcode-cn.com/problems/number-of-enclaves/
 
 ### 代码
 
+Python Code:
+
 ```python
 class Solution:
     temp = 0
@@ -111,6 +113,8 @@ class Solution:
 - dfs 消除法
 
 ### 代码
+
+Python Code:
 
 ```python
 #
