--- a/problems/1023.camelcase-matching.md
+++ b/problems/1023.camelcase-matching.md
@@ -68,6 +68,8 @@ https://leetcode-cn.com/problems/camelcase-matching/
 
 > 给定字符串 s 和 t ，判断 s 是否为 t 的子序列
 
+Python Code:
+
 ```python
 class Solution:
     def isSubsequence(self, s: str, t: str) -> bool:
@@ -100,6 +102,8 @@ class Solution:
 - 子串
 
 ## 代码
+
+Python Code:
 
 ```python
 class Solution:
