--- a/problems/73.set-matrix-zeroes.md
+++ b/problems/73.set-matrix-zeroes.md
@@ -220,7 +220,7 @@ class Solution:
 
 ```
 
-另一种方法是用一个特殊符合标记需要改变的结果，这里用None
+另一种方法是用一个特殊符合标记需要改变的结果，只要这个特殊标记不在我们的题目数据范围（0和1）即可，这里用None。
 ```python
 class Solution:
     def setZeroes(self, matrix: List[List[int]]) -> None:
