--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -116,8 +116,6 @@ JavaScript Code:
 var maxArea = function(height) {
     if (!height || height.length <= 1) return 0;
     
-    // 双指针来进行优化
-    // 时间复杂度是O(n)
     let leftPos = 0;
     let rightPos = height.length - 1;
     let max = 0;
@@ -154,3 +152,12 @@ public:
     }
 };
 ```
+
+***复杂度分析***
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(1)$
+
+
+大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
+
+![](https://pic.leetcode-cn.com/89ef69abbf02a2957838499a96ce3fbb26830aae52e3ab90392e328c2670cddc-file_1581478989502)
