chore: delete no need compare (#352)

--- a/problems/15.3-sum.md
+++ b/problems/15.3-sum.md
@@ -93,18 +93,14 @@ var threeSum = function(nums) {
     if (nums[i] > 0) break;
     // skip duplicated result without set
     if (i > 0 && nums[i] === nums[i - 1]) continue;
-    let left = i;
+    let left = i + 1;
     let right = nums.length - 1;
    
     // for each index i
     // we want to find the triplet [i, left, right] which sum to 0
     while (left < right) {
-      // skip i === left or i === right, in that case, the index i will be used twice
-      if (left === i) {
-        left++;
-      } else if (right === i) {
-        right--;
-      } else if (nums[left] + nums[right] + nums[i] === 0) {
+      // since left < right, and left > i, no need to compare i === left and i === right.
+      if (nums[left] + nums[right] + nums[i] === 0) {
         list.push([nums[left], nums[right], nums[i]]);
         // skip duplicated result without set
         while(nums[left] === nums[left + 1]) {
