feat: 增加python 代码

--- a/problems/221.maximal-square.md
+++ b/problems/221.maximal-square.md
@@ -55,9 +55,31 @@ dp[i - 1][j - 1]我们直接拿到，关键是`往上和往左进行延伸`, 最
 
 ## 代码
 
+代码支持：Python，JavaScript：
+
+Python Code：
+
+```python
+class Solution:
+    def maximalSquare(self, matrix: List[List[str]]) -> int:
+        res = 0
+        m = len(matrix)
+        if m == 0:
+            return 0
+        n = len(matrix[0])
+        dp = [[0] * (n + 1) for _ in range(m + 1)]
+
+        for i in range(1, m + 1):
+            for j in range(1, n + 1):
+                dp[i][j] = min(dp[i - 1][j], dp[i][j - 1], dp[i - 1][j - 1]) + 1 if matrix[i - 1][j - 1] == "1" else 0
+                res = max(res, dp[i][j])
+        return res ** 2
+```
+
+
+JavaScript Code：
+
 ```js
-
-
 
 /*
  * @lc app=leetcode id=221 lang=javascript
@@ -98,7 +120,8 @@ var maximalSquare = function(matrix) {
 };
 ```
 
-***复杂度分析***
-- 时间复杂度：$O(M * N)$，其中M为行数，N为列数。
-- 空间复杂度：$O(N)$，其中N为列数。
 
+***复杂度分析***
+
+- 时间复杂度：$O(M * N)$，其中M为行数，N为列数。
+- 空间复杂度：$O(M * N)$，其中M为行数，N为列数。
