--- a/problems/102.binary-tree-level-order-traversal.md
+++ b/problems/102.binary-tree-level-order-traversal.md
@@ -4,16 +4,20 @@ https://leetcode.com/problems/binary-tree-level-order-traversal/description/
 
 ## 题目描述
 ```
-Given a binary tree, return the level order traversal of its nodes' values. (ie, from left to right, level by level).
+给你一个二叉树，请你返回其按 层序遍历 得到的节点值。 （即逐层地，从左到右访问所有节点）。
 
-For example:
-Given binary tree [3,9,20,null,null,15,7],
+ 
+
+示例：
+二叉树：[3,9,20,null,null,15,7],
+
     3
    / \
   9  20
     /  \
    15   7
-return its level order traversal as:
+返回其层次遍历结果：
+
 [
   [3],
   [9,20],
@@ -222,6 +226,14 @@ class Solution:
         add_to_result(0, root)
         return result
 ```
+
+***复杂度分析***
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(N)$
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
+
+大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
 
 ## 相关题目
 - [103.binary-tree-zigzag-level-order-traversal](./103.binary-tree-zigzag-level-order-traversal.md)
