--- a/problems/102.binary-tree-level-order-traversal.md
+++ b/problems/102.binary-tree-level-order-traversal.md
@@ -235,6 +235,10 @@ class Solution:
 
 大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
 
+## 扩展
+
+实际上这道题方法很多， 比如经典的三色标记法。
+
 ## 相关题目
 - [103.binary-tree-zigzag-level-order-traversal](./103.binary-tree-zigzag-level-order-traversal.md)
 - [104.maximum-depth-of-binary-tree](./104.maximum-depth-of-binary-tree.md)
