--- a/problems/1371.find-the-longest-substring-containing-vowels-in-even-counts.md
+++ b/problems/1371.find-the-longest-substring-containing-vowels-in-even-counts.md
@@ -33,7 +33,7 @@ s 只包含小写英文字母。
 
 ```
 
-## 暴力法（AC）
+## 暴力法 + 剪枝
 
 ### 思路
 
@@ -71,7 +71,7 @@ class Solution:
 - 时间复杂度：双层循环找出所有子串的复杂度是$O(n^2)$，统计元音个数复杂度也是$O(n)$，因此这种算法的时间复杂度为$O(n^3)$。
 - 空间复杂度：$O(1)$
 
-## 前缀和（TLE）
+## 前缀和 + 剪枝
 
 ### 思路
 
@@ -104,7 +104,6 @@ class Solution:
         return True
     def findTheLongestSubstring(self, s: str) -> int:
         n = len(s)
-        res = 0
 
         pre = [[0] * 5 for _ in range(n)]
 
@@ -115,11 +114,11 @@ class Solution:
                     pre[i][j] = pre[i - 1][j] + 1
                 else:
                     pre[i][j] = pre[i - 1][j]
-        for i in range(n):
-            for j in range(i, n):
-                if self.check(s, pre, i, j):
-                    res = max(res, j - i + 1)
-        return res
+        for i in range(n - 1, -1, -1):
+            for j in range(n - i):
+                if self.check(s, pre, j, i + j):
+                    return i + 1
+        return 0
 ```
 
 Java Code：
@@ -152,19 +151,14 @@ class Solution {
             }
         }
 
-        // find max
-        int maxLen = 0;
+        for (int i = len - 1; i >= 0; i--) {
 
-        for (int i = 0; i < len; i++) {
-
-            for (int j = i; j < len; j++) {
-
-                if (checkValid(preSum, s, i, j))
-                    maxLen = Math.max(maxLen, j - i + 1);
+            for (int j = 0; j < len - i; j++) {
+                if (checkValid(preSum, s, i, i + j))
+                    return i + 1
             }
         }
-
-        return maxLen;
+        return 0
     }
 
 
@@ -201,7 +195,7 @@ class Solution {
 - 时间复杂度：$O(n^2)$。
 - 空间复杂度：$O(n)$
 
-## 前缀和 + 状态压缩（AC）
+## 前缀和 + 状态压缩 c
 
 ### 思路
 
