--- a/problems/1371.find-the-longest-substring-containing-vowels-in-even-counts.md
+++ b/problems/1371.find-the-longest-substring-containing-vowels-in-even-counts.md
@@ -33,8 +33,6 @@ s 只包含小写英文字母。
 
 ```
 
-<<<<<<< HEAD
-
 ## 暴力法 + 剪枝
 
 =======
@@ -203,7 +201,7 @@ class Solution {
 - 时间复杂度：$O(n^2)$。
 - 空间复杂度：$O(n)$
 
-## 前缀和 + 状态压缩 c
+## 前缀和 + 状态压缩
 
 ### 思路
 
