--- a/problems/5.longest-palindromic-substring.md
+++ b/problems/5.longest-palindromic-substring.md
@@ -24,7 +24,7 @@ https://leetcode-cn.com/problems/longest-palindromic-substring/
 
 解决这类问题的核心思想就是两个字“延伸”，具体来说
 
-- 如果一个字符串是回文串，那么在它左右分别加上一个相同的字符，那么它一定还是一个回文串
+- 如果在一个不是回文字符串的字符串两端添加任何字符，或者在回文串左右分别加不同的字符，得到的一定不是回文串
 - 如果一个字符串不是回文串，或者在回文串左右分别加不同的字符，得到的一定不是回文串
 
 事实上，上面的分析已经建立了大问题和小问题之间的关联，
