--- a/problems/5.longest-palindromic-substring.md
+++ b/problems/5.longest-palindromic-substring.md
@@ -118,6 +118,17 @@ var longestPalindrome = function(s) {
 };
 ```
 
+
+***复杂度分析***
+- 时间复杂度：$O(N^2)$
+- 空间复杂度：$O(N^2)$
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
+
+大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
+
+![](https://pic.leetcode-cn.com/89ef69abbf02a2957838499a96ce3fbb26830aae52e3ab90392e328c2670cddc-file_1581478989502)
+
 ## 相关题目
 
 - [516.longest-palindromic-subsequence](./516.longest-palindromic-subsequence.md)
