feat: add code with self-implemented sum method (#365)
* feat: add code with self-implemented sum method

* feat: 暴力法的O(n^2)实现

--- a/problems/560.subarray-sum-equals-k.md
+++ b/problems/560.subarray-sum-equals-k.md
@@ -25,8 +25,10 @@ class Solution:
     def subarraySum(self, nums: List[int], k: int) -> int:
         cnt, n =  0, len(nums)
         for i in range(n):
+            sum = 0
             for j in range(i, n):
-                if (sum(nums[i:j + 1]) == k): cnt += 1
+                sum += nums[j]
+                if (sum == k): cnt += 1
         return cnt
 ```
 
