fix: code highlight

--- a/problems/518.coin-change-2.md
+++ b/problems/518.coin-change-2.md
@@ -154,7 +154,7 @@ var change = function(amount, coins) {
 
 Python Code:
 
-```
+```python
 class Solution:
     def change(self, amount: int, coins: List[int]) -> int:
         dp = [0] * (amount + 1)
