--- a/problems/84.largest-rectangle-in-histogram.md
+++ b/problems/84.largest-rectangle-in-histogram.md
@@ -130,7 +130,11 @@ class Solution:
 
 实际上，读完第二种方法的时候，你应该注意到了。我们的核心是求左边第一个比 i 小的和右边第一个比 i 小的。 如果你熟悉单调栈的话，那么应该会想到这是非常适合使用单调栈来处理的场景。
 
-为了简单起见，我在 heights 首尾添加了两个哨兵元素，这样可以减少边界处理的额外代码。
+从左到右遍历柱子，对于每一个柱子，我们想找到第一个高度小于它的柱子，那么我们就可以使用一个单调递增栈来实现。 如果柱子大于栈顶的柱子，那么说明不是我们要找的柱子，我们把它塞进去继续遍历，如果比栈顶小，那么我们就找到了第一个小于的柱子。 **对于栈顶元素，其右边第一个小于它的就是当前遍历到的柱子，左边第一个小于它的就是栈中下一个要被弹出的元素**，因此以当前栈顶为最小柱子的面积为**当前栈顶的柱子高度 * (当前遍历到的柱子索引 - 1 - 栈中下一个要被弹出的元素索引 - 1 + 1)**
+
+这种方法只需要遍历一次，并用一个栈。由于每一个元素最多进栈出栈一次，因此时间和空间复杂度都是$O(N)$。
+
+为了统一算法逻辑，减少边界处理，我在 heights 首尾添加了两个哨兵元素，**这样我们可以保证所有的柱子都会出栈**。
 
 ### 代码
 
@@ -149,6 +153,30 @@ class Solution:
 
 - 时间复杂度：$O(N)$
 - 空间复杂度：$O(N)$
+
+
+2020-05-30更新：
+
+有的观众反应看不懂为啥需要两个哨兵。 其实末尾的哨兵就是为了将栈清空，防止遍历完成栈中还有没参与运算的数据。
+
+而前面的哨兵有什么用呢？ 我这里把上面代码进行了拆解：
+
+```py
+class Solution:
+    def largestRectangleArea(self, heights: List[int]) -> int:
+        n, heights, st, ans = len(heights),[0] + heights + [0], [], 0
+        for i in range(n + 2):
+            while st and heights[st[-1]] > heights[i]:
+                a = heights[st[-1]]
+                # 如果没有前面的哨兵，这里可能会越界。
+                st.pop()
+                ans = max(ans, a * (i - 1 - st[-1]))
+            st.append(i)
+        return ans
+ ```
+
+
+
 
 欢迎关注我的公众号《脑洞前端》获取更多更新鲜的 LeetCode 题解
 
