--- a/problems/101.symmetric-tree.md
+++ b/problems/101.symmetric-tree.md
@@ -46,7 +46,7 @@ https://leetcode-cn.com/problems/symmetric-tree/
 
 最初我的想法是两次遍历，第一次遍历的同时将遍历结果存储到哈希表中，然后第二次遍历去哈希表取。
 
-这种方法可行，但是无需要 N 的空间（N 为节点总数）。我想到如果两者可以同时进行遍历，是不是就省去了哈希表的开销。
+这种方法可行，但是需要 N 的空间（N 为节点总数）。我想到如果两者可以同时进行遍历，是不是就省去了哈希表的开销。
 
 如果不明白的话，我举个简单例子：
 
