--- a/problems/101.symmetric-tree.md
+++ b/problems/101.symmetric-tree.md
@@ -74,9 +74,13 @@ r = len(nums) - 1
 
 while l < r:
    if nums[l] != nums[r]: return False
+   l += 1
+   r -= 1
 return True
 
 ```
+
+> 其实更像本题一点的话应该是从中间分别向两边扩展 😂
 
 ## 代码
 
