--- a/problems/238.product-of-array-except-self.md
+++ b/problems/238.product-of-array-except-self.md
@@ -1,20 +1,26 @@
-## 题目地址
+## 题目地址（238. 除自身以外数组的乘积）
 
 https://leetcode.com/problems/product-of-array-except-self/description/
 
 ## 题目描述
 
 ```
-Given an array nums of n integers where n > 1,  return an array output such that output[i] is equal to the product of all the elements of nums except nums[i].
+给你一个长度为 n 的整数数组 nums，其中 n > 1，返回输出数组 output ，其中 output[i] 等于 nums 中除 nums[i] 之外其余各元素的乘积。
 
-Example:
+ 
 
-Input:  [1,2,3,4]
-Output: [24,12,8,6]
-Note: Please solve it without division and in O(n).
+示例:
 
-Follow up:
-Could you solve it with constant space complexity? (The output array does not count as extra space for the purpose of space complexity analysis.)
+输入: [1,2,3,4]
+输出: [24,12,8,6]
+ 
+
+提示：题目数据保证数组之中任意元素的全部前缀元素和后缀（甚至是整个数组）的乘积都在 32 位整数范围内。
+
+说明: 请不要使用除法，且在 O(n) 时间复杂度内完成此题。
+
+进阶：
+你可以在常数空间复杂度内完成这个题目吗？（ 出于对空间复杂度分析的目的，输出数组不被视为额外空间。）
 
 
 ```
@@ -42,38 +48,6 @@ Could you solve it with constant space complexity? (The output array does not co
 ## 代码
 
 ```js
-
-/*
- * @lc app=leetcode id=238 lang=javascript
- *
- * [238] Product of Array Except Self
- *
- * https://leetcode.com/problems/product-of-array-except-self/description/
- *
- * algorithms
- * Medium (53.97%)
- * Total Accepted:    246.5K
- * Total Submissions: 451.4K
- * Testcase Example:  '[1,2,3,4]'
- *
- * Given an array nums of n integers where n > 1,  return an array output such
- * that output[i] is equal to the product of all the elements of nums except
- * nums[i].
- *
- * Example:
- *
- *
- * Input:  [1,2,3,4]
- * Output: [24,12,8,6]
- *
- *
- * Note: Please solve it without division and in O(n).
- *
- * Follow up:
- * Could you solve it with constant space complexity? (The output array does
- * not count as extra space for the purpose of space complexity analysis.)
- *
- */
 /**
  * @param {number[]} nums
  * @return {number[]}
