--- a/problems/380.insert-delete-getrandom-o1.md
+++ b/problems/380.insert-delete-getrandom-o1.md
@@ -70,6 +70,8 @@ randomSet.getRandom();
 
 对于 1，我们可以通过哈希表来实现。 key 是插入的数字，value 是数组对应的索引。删除的时候我们根据 key 反查出索引就可以快速找到。
 
+> 题目说明了不会存在重复元素，所以我们可以这么做。思考一下，如果没有这个限制会怎么样？
+
 对于 2，我们可以通过和数组最后一项进行交换的方式来实现，这样就避免了数据移动。同时数组其他项的索引仍然保持不变，非常好！
 
 > 相应地，我们插入的时候，需要维护哈希表
