--- a/problems/380.insert-delete-getrandom-o1.md
+++ b/problems/380.insert-delete-getrandom-o1.md
@@ -76,6 +76,20 @@ randomSet.getRandom();
 
 > 相应地，我们插入的时候，需要维护哈希表
 
+图解：
+
+以依次【1，2，3，4】之后为初始状态，那么此时状态是这样的：
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfjm9sg9olj30pg11wwiu.jpg)
+
+而当要插入一个新的5的时候， 我们只需要分别向数组末尾和哈希表中插入这条记录即可。
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfjmanhni6j30ka126tdm.jpg)
+
+而删除的时候稍微有一点复杂：
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfjmbib4v5j30z60u049j.jpg)
+
 ## 关键点解析
 
 - 数组
